--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/">positional gene sets (299 gene sets)</a>
+            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/">Positional gene sets (299 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -37,7 +37,7 @@
             <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/">curated gene sets (5529 gene sets)</a>
+            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/">Curated gene sets (5529 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -53,7 +53,7 @@
             <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/">regulatory target gene sets (3735 gene sets)</a>
+            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/">Regulatory target gene sets (3735 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -61,7 +61,7 @@
             <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/">computational gene sets (858 gene sets)</a>
+            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/">Computational gene sets (858 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -77,7 +77,7 @@
             <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/">oncogenic signatures (189 gene sets)</a>
+            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/">Oncogenic signatures (189 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -85,7 +85,7 @@
             <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/">immunologic signatures (4872 gene sets)</a>
+            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/">Immunologic signatures (4872 gene sets)</a>
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
             <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594204235543/"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594204235543/">positional gene sets (299 gene sets)</a>
+            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594204235543/">Positional gene sets (299 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -110,7 +110,7 @@
             <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594204298052/"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594204298052/">curated gene sets (5529 gene sets)</a>
+            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594204298052/">Curated gene sets (5529 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -126,7 +126,7 @@
             <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594204348124/"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594204348124/">regulatory target gene sets (3735 gene sets)</a>
+            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594204348124/">Regulatory target gene sets (3735 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -134,7 +134,7 @@
             <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594204405199/"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594204405199/">computational gene sets (858 gene sets)</a>
+            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594204405199/">Computational gene sets (858 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -150,7 +150,7 @@
             <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594204521710/"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594204521710/">oncogenic signatures (189 gene sets)</a>
+            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594204521710/">Oncogenic signatures (189 gene sets)</a>
           </div>
         </div>
         <div class="item">
@@ -158,7 +158,7 @@
             <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594204578133"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594204578133">immunologic signatures (4872 gene sets)</a>
+            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594204578133">Immunologic signatures (4872 gene sets)</a>
           </div>
         </div>
       </div>
