--- a/index.html
+++ b/index.html
@@ -26,66 +26,66 @@
       <div class="ui middle aligned divided list">
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
+            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/index.html"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/">Positional gene sets (299 gene sets)</a>
+            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/index.html">Positional gene sets (299 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/">Curated gene sets (5529 gene sets)</a>
+            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/index.html">Curated gene sets (5529 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
+            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/index.html">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
+            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/index.html"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/">Regulatory target gene sets (3735 gene sets)</a>
+            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/index.html">Regulatory target gene sets (3735 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
+            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/index.html"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/">Computational gene sets (858 gene sets)</a>
+            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/index.html">Computational gene sets (858 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
+            <a href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/index.html"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/">GO gene sets (10192 gene sets)</a>
+            <a href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/index.html">GO gene sets (10192 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
+            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/index.html"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/">Oncogenic signatures (189 gene sets)</a>
+            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/index.html">Oncogenic signatures (189 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
+            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/index.html"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/">Immunologic signatures (4872 gene sets)</a>
+            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/index.html">Immunologic signatures (4872 gene sets)</a>
           </div>
         </div>
       </div>
@@ -99,66 +99,66 @@
       <div class="ui middle aligned divided list">
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
+            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/index.html"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/">Positional gene sets (299 gene sets)</a>
+            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/index.html">Positional gene sets (299 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/">Curated gene sets (5529 gene sets)</a>
+            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/index.html">Curated gene sets (5529 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
+            <a href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/index.html">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
+            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/index.html"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/">Regulatory target gene sets (3735 gene sets)</a>
+            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/index.html">Regulatory target gene sets (3735 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
+            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/index.html"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/">Computational gene sets (858 gene sets)</a>
+            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/index.html">Computational gene sets (858 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
+            <a href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/index.html"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/">GO gene sets (10192 gene sets)</a>
+            <a href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/index.html">GO gene sets (10192 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
+            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/index.html"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/">Oncogenic signatures (189 gene sets)</a>
+            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/index.html">Oncogenic signatures (189 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
+            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/index.html"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/">Immunologic signatures (4872 gene sets)</a>
+            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/index.html">Immunologic signatures (4872 gene sets)</a>
           </div>
         </div>
       </div>
