--- a/index.html
+++ b/index.html
@@ -20,72 +20,72 @@
 
       <h3 class="first">Daniel Blanco Melo - GSE147507</h3>
       <p>Viral pandemics pose an imminent threat to humanity. The ongoing COVID-19 pandemic, caused by the SARS-CoV-2 virus, requires the urgent development of anti-viral therapies. Because of its recent emergence, there is a paucity of information regarding viral behavior and host response following SARS-CoV-2 infection. Here, we offer an in-depth analysis of the host response to SARS-CoV-2 as it compares to other respiratory infections. Cell and animal models of SARS-CoV-2 infections, in addition to transcriptional profiling of a COVID-19 lung biopsy consistently revealed a unique and inappropriate inflammatory response defined by elevated chemokine expression in the absence of Type I and III interferons. Our identification of a muted transcriptional response to SARS-CoV-2 supports a model in which initial failure to rapidly respond to infection results in prolonged viral replication and an influx of proinflammatory cells that induce alveolar damage and manifest in COVID-19 lung pathology.</p>
-      <p>Transcriptional response to SARS-CoV-2 infection (<a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE147507"><i class="linkify icon"></i> GEO</a>)</p>
-      <p>Imbalanced Host Response to SARS-CoV-2 Drives Development of COVID-19 (<a href="https://www.sciencedirect.com/science/article/pii/S009286742030489X"><i class="newspaper outline icon"></i> Journal</a>)</p>
+      <p>Transcriptional response to SARS-CoV-2 infection (<a target="_blank" href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE147507"><i class="linkify icon"></i> GEO</a>)</p>
+      <p>Imbalanced Host Response to SARS-CoV-2 Drives Development of COVID-19 (<a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S009286742030489X"><i class="newspaper outline icon"></i> Journal</a>)</p>
 
       <div class="ui middle aligned divided list">
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/index.html"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
+            <a target="_blank" href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/index.html"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/index.html">Positional gene sets (299 gene sets)</a>
+            <a target="_blank" href="GSE147507/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1593466793662/index.html">Positional gene sets (299 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a target="_blank" href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/index.html">Curated gene sets (5529 gene sets)</a>
+            <a target="_blank" href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593468377399/index.html">Curated gene sets (5529 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a target="_blank" href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/index.html">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
+            <a target="_blank" href="GSE147507/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1593689228428/index.html">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/index.html"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
+            <a target="_blank" href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/index.html"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/index.html">Regulatory target gene sets (3735 gene sets)</a>
+            <a target="_blank" href="GSE147507/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1593469078495/index.html">Regulatory target gene sets (3735 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/index.html"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
+            <a target="_blank" href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/index.html"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/index.html">Computational gene sets (858 gene sets)</a>
+            <a target="_blank" href="GSE147507/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1593469829102/index.html">Computational gene sets (858 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/index.html"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
+            <a target="_blank" href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/index.html"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/index.html">GO gene sets (10192 gene sets)</a>
+            <a target="_blank" href="GSE147507/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1593470461645/index.html">GO gene sets (10192 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/index.html"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
+            <a target="_blank" href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/index.html"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/index.html">Oncogenic signatures (189 gene sets)</a>
+            <a target="_blank" href="GSE147507/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1593512452048/index.html">Oncogenic signatures (189 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/index.html"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
+            <a target="_blank" href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/index.html"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
           </div>
           <div class="content">
-            <a href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/index.html">Immunologic signatures (4872 gene sets)</a>
+            <a target="_blank" href="GSE147507/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1593512517312/index.html">Immunologic signatures (4872 gene sets)</a>
           </div>
         </div>
       </div>
@@ -94,71 +94,71 @@
 
       <h3 class="first">Daisuke Okuzaki - GSE150819</h3>
       <p>	Coronavirus disease 2019 (COVID-19) is a disease that causes fatal disorders including severe pneumonia. To develop a therapeutic drug for COVID-19, a model that can reproduce the viral life cycle and can evaluate the drug efficacy of anti-viral drugs is essential. In this study, we established a method to generate human bronchial organoids (hBO) from commercially available cryopreserved primary human bronchial epithelial cells (hBEpC) and examined whether they could be used as a model for severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) research. The hBO were found to contain basal, club, ciliated, and goblet cells. Also, angiotensin-converting enzyme 2 (ACE2), which is a receptor for SARS-CoV-2, and transmembrane serine proteinase 2 (TMPRSS2), which is an essential serine protease for priming spike protein of SARS-CoV-2, were highly expressed. After hBO were infected with SARS-CoV-2, remarkable amplification of the viral genome and the expression of spike protein of the virus was confirmed. In addition, cytotoxicity and pyknosis cells were observed due to the virus infection. Furthermore, treatment with camostat, an inhibitor of TMPRSS2, reduced the viral copy number to 2% of the control group. RNA-seq analyses revealed genes whose expression was altered by SARS-CoV-2 infection and camostat treatment. These results suggest that our hBO are acceptable for SARS-CoV-2 infection and replication, but also can be used as a model for COVID-19 drug discovery.</p>
-      <p>Generation of human bronchial organoids for SARS-CoV-2 research (<a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE150819"><i class="linkify icon"></i> GEO</a>)</p>
+      <p>Generation of human bronchial organoids for SARS-CoV-2 research (<a target="_blank" href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE150819"><i class="linkify icon"></i> GEO</a>)</p>
 
       <div class="ui middle aligned divided list">
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/index.html"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
+            <a target="_blank" href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/index.html"><span class="ui label teal small"><i class="dna icon"></i> C1</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/index.html">Positional gene sets (299 gene sets)</a>
+            <a target="_blank" href="GSE150819/c1.all.v7.1.symbols/my_analysis.GseaPreranked.1594219926700/index.html">Positional gene sets (299 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a target="_blank" href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/index.html">Curated gene sets (5529 gene sets)</a>
+            <a target="_blank" href="GSE150819/c2.all.v7.1.symbols/my_analysis.GseaPreranked.1594219981870/index.html">Curated gene sets (5529 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
+            <a target="_blank" href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/index.html"><span class="ui label yellow small"><i class="dna icon"></i> C2</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/index.html">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
+            <a target="_blank" href="GSE150819/c2.cp.biocarta.v7.1.symbols/my_analysis.GseaPreranked.1594210503725/index.html">BIOCARTA gene sets (incl. ACE2) (289 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/index.html"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
+            <a target="_blank" href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/index.html"><span class="ui label blue small"><i class="dna icon"></i> C3</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/index.html">Regulatory target gene sets (3735 gene sets)</a>
+            <a target="_blank" href="GSE150819/c3.all.v7.1.symbols/my_analysis.GseaPreranked.1594220627994/index.html">Regulatory target gene sets (3735 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/index.html"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
+            <a target="_blank" href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/index.html"><span class="ui label orange small"><i class="dna icon"></i> C4</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/index.html">Computational gene sets (858 gene sets)</a>
+            <a target="_blank" href="GSE150819/c4.all.v7.1.symbols/my_analysis.GseaPreranked.1594221295194/index.html">Computational gene sets (858 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/index.html"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
+            <a target="_blank" href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/index.html"><span class="ui label olive small"><i class="dna icon"></i> C5</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/index.html">GO gene sets (10192 gene sets)</a>
+            <a target="_blank" href="GSE150819/c5.all.v7.1.symbols/my_analysis.GseaPreranked.1594221417906/index.html">GO gene sets (10192 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/index.html"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
+            <a target="_blank" href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/index.html"><span class="ui label violet small"><i class="dna icon"></i> C6</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/index.html">Oncogenic signatures (189 gene sets)</a>
+            <a target="_blank" href="GSE150819/c6.all.v7.1.symbols/my_analysis.GseaPreranked.1594222070364/index.html">Oncogenic signatures (189 gene sets)</a>
           </div>
         </div>
         <div class="item">
           <div class="left floated content">
-            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/index.html"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
+            <a target="_blank" href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/index.html"><span class="ui label purple small"><i class="dna icon"></i> C7</span></a>
           </div>
           <div class="content">
-            <a href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/index.html">Immunologic signatures (4872 gene sets)</a>
+            <a target="_blank" href="GSE150819/c7.all.v7.1.symbols/my_analysis.GseaPreranked.1594222114894/index.html">Immunologic signatures (4872 gene sets)</a>
           </div>
         </div>
       </div>
