--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
       <meta charset="utf-8">
-      <!-- Viewport and stylesheet at the top for better performance -->
+
+      <!-- Viewport and stylesheet at the top for better performance. -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
       <!-- Semantic ui -->
       <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
       <link href="//fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
