--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
       <meta name="robots" content="noindex,nofollow">
   </head>
   <body>
-    <div class="ui text container" style="margin-top: 7em;">
+    <div class="ui text container">
+      <div class="ui items">
+        <div class="item" style="border-bottom: 1px solid #dededf;padding-bottom: 20px;margin-bottom: 4em;">
+          <a class="ui tiny image" style="padding: 0px;box-shadow: 10px 10px #dededf;">
+            <img src="/images/logo.png">
+          </a>
+          <div class="content" style="position: relative;">
+            <div class="header" style="position: absolute;bottom: 0px;">
+              <h2>UNRAVEL COVID-19</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <h1 class="ui dividing header">GSEA results</h1>
 
       <h3 class="first">Daniel Blanco Melo - GSE147507</h3>
