--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="ui text container">
       <div class="ui items">
         <div class="item" style="border-bottom: 1px solid #dededf;padding-bottom: 20px;margin-bottom: 4em;">
-          <a class="ui tiny image" style="padding: 0px;box-shadow: 10px 10px #dededf;">
+          <div class="ui tiny image" style="padding: 0px;box-shadow: 10px 10px #dededf;">
             <img src="/images/logo.png">
-          </a>
+          </div>
           <div class="content" style="position: relative;">
             <div class="header" style="position: absolute;bottom: 0px;">
               <h2>UNRAVEL COVID-19</h2>
