--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="header" style="position: absolute;bottom: 0px;">
               <h2>UNRAVEL COVID-19</h2>
             </div>
+            <div class="ui right floated  item"><a href="https://github.com/unravelcovid/"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" style="height: 40px;margin-top: inherit;"></a></div>
           </div>
         </div>
       </div>
@@ -178,6 +179,6 @@
         </div>
       </div>
     </div>
-    <div style="margin-bottom: 100px !important; display: block; height: 1px;"></div>
+    <div style="margin-bottom: 100px !important; display: block; height: 100px;"></div>
   </body>
 </html>
